# otus_cpp

./: .travis.yml  CMakeLists.txt  allocator.h  autotests.cpp  main.cpp  main_window.h  matrix.h  print_ip.h  shape.h  simplelist.h  sketch.h  travis.yml
src/: main.cpp  matrix.h
test/: test.cpp
